# JXKJ_Basic_code_Hal

./: HAL-SPPwithBLE.code-workspace
HAL-MPU6050/: .mxproject  CMakeLists.txt  HAL-MPU6050.ioc
HAL-MPU6050/Core/Src/: gpio.c  i2c.c  main.c
HAL-MPU6050/EWARM/: HAL-MPU6050.ewd  HAL-MPU6050.ewp  Project.eww
HAL-MPU6050/USER/: MPU6050.c  MPU6050.h
HAL-SPPwithBLE/: .gitignore
HAL-SPPwithBLE/Core/Src/: main.c  stm32f1xx_it.c  usart.c
HAL-SPPwithBLE/USER/: LED.c  LED.h  OLED.h  Serial_BLE.c  Serial_BLE.h
HAL-SPPwithBLE/cmake/: gcc-arm-none-eabi.cmake
HAL-TIMER-PWMI-ENCODER/Core/Src/: main.c  tim.c
HAL-TIMER-PWMI-ENCODER/USER/: Encoder.c  Encoder.h
HAL-Timer-Key-LED/: .gitignore
HAL-Timer-Key-LED/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c
HAL-Timer-Key-LED/USER/: Key.c  Key.h  LED.c  LED.h  OLED.c  OLED_Data.h
HAL-USART/: CMakeLists.txt  HAL-USART.ioc
HAL-USART/Core/Src/: main.c  stm32f1xx_it.c  usart.c
HAL-USART/USER/: OLED.h  Serial.c  Serial.h
OLED_MX/: CMakeLists.txt
OLED_MX/OLED-CubeMX/: CMakeLists.txt  OLED-CubeMX.ioc
OLED_MX/OLED-CubeMX/Core/Src/: gpio.c  main.c
OLED_MX/OLED-CubeMX/USER/: OLED_Data.c
OLED_MX/User/Inc/: OLED.h
OLED_MX/User/Scr/: OLED.c
OLED_MX_UseBuf/: .mxproject  CMakeLists.txt  OLED_MX_UseBuf.ioc
OLED_MX_UseBuf/Core/Src/: gpio.c  main.c
OLED_MX_UseBuf/MDK-ARM/: OLED_MX_UseBuf.uvguix.86137  OLED_MX_UseBuf.uvoptx  OLED_MX_UseBuf.uvprojx
OLED_MX_UseBuf/MDK-ARM/RTE/_OLED_MX_UseBuf/: RTE_Components.h
OLED_MX_UseBuf/USER/: OLED.c  OLED.h  OLED_Practice.c
